--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,11 +4,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
-    <TextView
+    <WebView 
+        android:id="@+id/browser"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+    
+    <Button 
+        android:id="@+id/setupAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="@string/hello_world" />
-
+        android:text="Setup Account"
+        android:visibility="gone" />
+	<ListView
+	    android:id="@+id/appList"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:visibility="gone" />
+	
 </RelativeLayout>
