Organization List/App List/Add Rocks
Can add rocks to trello
Added organization list to pick organization
Added App list to pick apps you want to sync with trello

--- a/res/layout/list_view.xml
+++ b/res/layout/list_view.xml
@@ -5,7 +5,7 @@
     tools:context=".OrganizationsList" >
 
 	<ListView
-	    android:id="@+id/organizationsList"
+	    android:id="@+id/list_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 	
