--- a/res/layout/app.xml
+++ b/res/layout/app.xml
@@ -73,7 +73,8 @@
 		    android:textStyle="italic"
 		    android:textColor="#5978FF"
 		    android:clickable="true"
-		    android:text="View in Trello" />
+		    android:text="View in Trello"
+		    android:visibility="invisible" />
 	
 		<ImageButton 
 		     android:id="@+id/app_sync"
@@ -82,6 +83,7 @@
 	         android:src="@drawable/sync"
 	         android:layout_alignParentRight="true"
 	         android:layout_centerVertical="true"
+	         android:visibility="invisible"
 			/>
         
     </RelativeLayout>
